--- a/Aula_4_Atividade/web/index.html
+++ b/Aula_4_Atividade/web/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>4.1 - Portal de cálculo de juros</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/css/style.css"/>
     </head>
     <body>
         
