--- a/Aula_4_Atividade/web/index.html
+++ b/Aula_4_Atividade/web/index.html
@@ -51,7 +51,7 @@ and open the template in the editor.
                 <input type="number" name="vp" placeholder=" Digite o valor presente"/>            
                 <input type="number" name="n" placeholder=" Digite o período(meses)"/>
                 <input type="number" name="j" step="0.1" placeholder=" Digite a taxa de juros"/>
-                <input type="submit" value="Calcular" id="button"/>
+                <input type="submit" value="Calcular"/>
 
             </form>
 
@@ -64,7 +64,7 @@ and open the template in the editor.
                 <input type="number" name="vp" placeholder=" Digite o valor presente"/>            
                 <input type="number" name="n" placeholder=" Digite o período(meses)"/>
                 <input type="number" name="j" step="0.1" placeholder=" Digite a taxa de juros"/>
-                <input type="submit" value="Calcular" id="button"/>
+                <input type="submit" value="Calcular"/>
 
             </form>
         
