--- a/JavaEEJSP_Calendar/web/index.html
+++ b/JavaEEJSP_Calendar/web/index.html
@@ -41,8 +41,8 @@ and open the template in the editor.
                 <form action="calendar.jsp">
                     <img src="assets/img/unnamed.png" class="form-img"/>
                     
-                    <div>
-                        <select name="m" id="m">                      
+                    <div>                        
+                        <select name="m">                      
                             <option value="1">Janeiro</option>
                             <option value="2">Fevereiro</option>
                             <option value="3">Março</option>
