--- a/JavaEEJSP_Calendar/web/index.html
+++ b/JavaEEJSP_Calendar/web/index.html
@@ -42,7 +42,8 @@ and open the template in the editor.
                     <img src="assets/img/unnamed.png" class="form-img"/>
                     
                     <div>                        
-                        <select name="m">                      
+                        <select name="m">
+                            <option value="0" selected disabled>Mês</option>
                             <option value="1">Janeiro</option>
                             <option value="2">Fevereiro</option>
                             <option value="3">Março</option>
@@ -69,7 +70,7 @@ and open the template in the editor.
         
         <footer>
             <p><b>Nome:</b> Fernanda de Moura Cruz</p>
-            <p><b>RA:</b> 0000000000</p>
+            <p><b>RA:</b>1290482012008</p>
         </footer>
     </body>
 </html>
